--- a/app.html
+++ b/app.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="app.css" />
-        <script type="application/dart" src="app.dart"></script>
-        <script src="packages/browser/dart.js"></script>
+		<link rel="stylesheet" href="/app.css" />
+        <script type="application/dart" src="/app.dart"></script>
+        <script src="/packages/browser/dart.js"></script>
     </head>
     <body>
     </body>
